--- a/A/Altice/Altice_May2020/ads/OPT_AO_Fiber_59_3yr(noCard)/160x600/160x600.html
+++ b/A/Altice/Altice_May2020/ads/OPT_AO_Fiber_59_3yr(noCard)/160x600/160x600.html
@@ -117,15 +117,15 @@ amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","160x600_OPT_SPRING_ACQ_AO_Amz_64Yr2_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","Stay<br>connected<br>on your<br>work day");
 amo.registerAttribute("frameText12","TEXT","and<br>school<br>day");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 123px;left: 19px;font-size: 15px;line-height:1.1;color: #fff;'><div style='height:13px;margin-top:-13px;font-size:77%;'>Exclusive offer!</div>Fiber Internet & TV</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 141px;left: 14px;width: 140px;color: #fff;line-height: 1;'><font style='font-size: 59px;'>$59</font><font style='margin-left: 4px;font-size: 10px;display: inline-block;vertical-align: 24px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 10.5px;padding: 4px 10px 3px 9px;margin: 2px 0px 0px 4px;border-top-right-radius: 15px;border-bottom-right-radius: 15px;color: #0084d6;background: #fff;'>Guaranteed for 3 yrs.</div><div class='AlticeRegular' style='margin: 6px 0 0 6px;font-size: 10px;'>Plus taxes, fees<br>& charges</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 112px;left: 19px;font-size: 18px;line-height:1.1;color: #fff;'>Fiber Internet<br>& TV</div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 149px;left: 14px;width: 140px;color: #fff;line-height: 1;'><font style='font-size: 59px;'>$59</font><font style='margin-left: 4px;font-size: 10px;display: inline-block;vertical-align: 24px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 10.5px;padding: 4px 10px 3px 9px;margin: 2px 0px 0px 4px;border-top-right-radius: 15px;border-bottom-right-radius: 15px;color: #0084d6;background: #fff;'>Guaranteed for 3 yrs.</div><div class='AlticeRegular' style='margin: 6px 0 0 6px;font-size: 10px;'>Plus taxes, fees<br>& charges</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:75px;left:12px;'><div class='bulletedText'>200 Mbps<br>Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:113px;left:12px;'><div class='bulletedText'>Altice One with<br>220+ channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:151px;left:12px;'><div class='bulletedText'>3 year price<br>guarantee!</div></div><div class='AlticeRegular' style='top: 449px;left: 18px;width:130px;font-size: 10px;line-height: 1.1;'>Wired connection up to 200 Mbps. WiFi speeds may vary.</div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top:75px;left:12px;'><div class='bulletedText'>200 Mbps upload and download speeds</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:129px;left:12px;'><div class='bulletedText'>Altice One with<br>220+ channels</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:167px;left:12px;'><div class='bulletedText'>3 year price<br>guarantee!</div></div><div class='AlticeRegular' style='top: 449px;left: 18px;width:130px;font-size: 10px;line-height: 1.1;'>Wired connection up to 200 Mbps. WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText41", "TEXT", "<div style='top: 74px;left: 18px;font-size: 18px;line-height:1.1;'><div style='color: #0084d6;height:20px;font-size:77%;'>Exclusive offer!</div>Fiber Internet<br>& TV</div>");
 amo.registerAttribute("frameText42", "TEXT", "<div style='top: 132px;left: 14px;width: 140px;line-height: 1;'><font style='font-size: 59px;' class='coloredText'>$59</font><font style='margin-left: 4px;font-size: 10px;display: inline-block;vertical-align: 24px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 10px;padding: 5px 10px 4px 9px;margin: 0px 0px 0px 4px;border-top-right-radius: 13px;border-bottom-right-radius: 13px;color: #fff;background: #0084d6;'>Guaranteed for 3 yrs.</div><div class='AlticeRegular' style='margin: 5px 0 0 5px;font-size: 10px;'>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 240px;left: 20px;transform: scale(0.88);transform-origin: top left;'><div class='bulletedText'>No annual contract</div><div class='bulletedText' style='margin-top: -3px;'>$100 gift card</div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 240px;left: 20px;transform: scale(0.88);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -298,7 +298,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 240px;left: 20px;
           var frameId = 3;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.3, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
@@ -310,12 +310,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 240px;left: 20px;
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:1.5})
+            .to('#frameText1', {autoAlpha:0,delay:2})
             .to('#frameText12', {autoAlpha:1})
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         gsap.delayedCall(.8, animateFrame1);
