--- a/A/Altice/Altice_May2020/ads/OPT_AO_Fiber_59_3yr(noCard)/300x600/300x600_frame1.html
+++ b/A/Altice/Altice_May2020/ads/OPT_AO_Fiber_59_3yr(noCard)/300x600/300x600_frame1.html
@@ -117,15 +117,15 @@ amo.registerAttribute("frameImage3","IMAGE","1x1.png");
 amo.registerAttribute("frameImage4","IMAGE","300x600_OPT_SPRING_ACQ_AO_Amz_64Yr2_Img_Frame05.png");
 amo.registerAttribute("frameText1","TEXT","Stay<br>connected<br>on your<br>work day");
 amo.registerAttribute("frameText12","TEXT","and<br>school<br>day");
-amo.registerAttribute("frameText21", "TEXT", "<div style='top: 115px;left: 33px;font-size: 28px;line-height:1.1;color: #fff;'><div style='height:28px;margin-top:-28px;font-size:77%;'>Exclusive offer!</div>Fiber Internet<br>& TV</div>");
-amo.registerAttribute("frameText22", "TEXT", "<div style='top: 170px;left: 24px;width: 260px;color: #fff;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;'>$59</font><font style='margin-left: 7px;font-size: 19px;display: inline-block;vertical-align: 48px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 15.5px;padding: 5px 11px 7px 10px;margin: 5px 0px 0px 11px;border-top-right-radius: 15px;border-bottom-right-radius: 15px;color: #0084d6;background: #fff;'>Guaranteed for 3 yrs.</div><div class='AlticeRegular' style='margin: 10px 0 0 10px;font-size: 14px;'>Plus taxes, fees<br>& charges</div></div>");
+amo.registerAttribute("frameText21", "TEXT", "<div style='top: 88px;left: 33px;font-size: 28px;line-height:1.1;color: #fff;'>Fiber Internet<br>& TV</div>");
+amo.registerAttribute("frameText22", "TEXT", "<div style='top: 145px;left: 24px;width: 260px;color: #fff;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;'>$59</font><font style='margin-left: 7px;font-size: 19px;display: inline-block;vertical-align: 48px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 15.5px;padding: 5px 11px 7px 10px;margin: 5px 0px 0px 11px;border-top-right-radius: 15px;border-bottom-right-radius: 15px;color: #0084d6;background: #fff;'>Guaranteed for 3 yrs.</div><div class='AlticeRegular' style='margin: 10px 0 0 10px;font-size: 14px;'>Plus taxes, fees<br>& charges</div></div>");
 amo.registerAttribute("frameText23", "TEXT", "&nbsp;");
-amo.registerAttribute("frameText31","TEXT","<div style='top:88px;left:18px;'><div class='bulletedText'>200 Mbps Internet</div></div>");
-amo.registerAttribute("frameText32","TEXT","<div style='top:121px;left:18px;'><div class='bulletedText'>Altice One with<br>220+ channels</div></div>");
-amo.registerAttribute("frameText33","TEXT","<div style='top:181px;left:18px;'><div class='bulletedText'>3 year price<br>guarantee!</div></div><div class='AlticeRegular' style='top: 477px;left: 18px;font-size: 14px;line-height: 1.1;'>Wired connection up to 200 Mbps.<br>WiFi speeds may vary.</div>");
+amo.registerAttribute("frameText31","TEXT","<div style='top:88px;left:18px;'><div class='bulletedText'>200 Mbps upload and download speeds</div></div>");
+amo.registerAttribute("frameText32","TEXT","<div style='top:175px;left:18px;'><div class='bulletedText'>Altice One with<br>220+ channels</div></div>");
+amo.registerAttribute("frameText33","TEXT","<div style='top:235px;left:18px;'><div class='bulletedText'>3 year price<br>guarantee!</div></div><div class='AlticeRegular' style='top: 477px;left: 18px;font-size: 14px;line-height: 1.1;'>Wired connection up to 200 Mbps.<br>WiFi speeds may vary.</div>");
 amo.registerAttribute("frameText41", "TEXT", "<div style='top: 86px;left: 24px;font-size: 28px;line-height:1.1;'><div style='color: #0084d6;height:25px;font-size:77%;'>Exclusive offer!</div>Fiber Internet & TV</div>");
 amo.registerAttribute("frameText42", "TEXT", "<div style='top: 137px;left: 17px;width: 260px;line-height: 1;'><font style='font-size: 116px;letter-spacing: -1.5px;' class='coloredText'>$59</font><font style='margin-left: 7px;font-size: 19px;display: inline-block;vertical-align: 48px;'>99/<br>mo.</font><div style='display:inline-block;font-size: 16px;padding: 6px 18px 5px 12px;margin: 3px 0px 0px 10px;border-top-right-radius: 13px;border-bottom-right-radius: 13px;color: #fff;background: #0084d6;'>Guaranteed for 3 yrs.</div><div class='AlticeRegular' style='margin: 10px 0 0 8px;font-size: 14px;'>Plus taxes, fees & charges</div></div>");
-amo.registerAttribute("frameText43", "TEXT", "<div style='top: 312px;left: 26px;transform: scale(0.655);transform-origin: top left;'><div class='bulletedText'>No annual contract</div><div class='bulletedText' style='margin-top: -3px;'>$100 gift card</div></div>");
+amo.registerAttribute("frameText43", "TEXT", "<div style='top: 323px;left: 26px;transform: scale(0.655);transform-origin: top left;'><div class='bulletedText'>No annual contract</div></div>");
 </script>
 <!-- End of overrode asset attributes values -->
 </head>
@@ -298,7 +298,7 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 312px;left: 26px;
           var frameId = 3;
           gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
           .to('#frameImage'+frameId, {duration:0, onComplete: bulletFrameAnimation, onCompleteParams:[3]})
-          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 2.8, opacity:0, onComplete: animateFrame4}));
+          .to('#frameImage'+frameId+', div[id^="frameText'+frameId+'"]', (flag==true?{}:{delay: 3.3, opacity:0, onComplete: animateFrame4}));
         }
         var animateFrame2 = function(flag){
           var frameId = 2;
@@ -310,12 +310,12 @@ amo.registerAttribute("frameText43", "TEXT", "<div style='top: 312px;left: 26px;
           ad.layers.frameVideo1.querySelector('video').onplay = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
             .to('#frameText1', {autoAlpha:1})
-            .to('#frameText1', {autoAlpha:0,delay:1.5})
+            .to('#frameText1', {autoAlpha:0,delay:2})
             .to('#frameText12', {autoAlpha:1})
           }
           ad.layers.frameVideo1.querySelector('video').onended = function(){
             gsap.timeline({defaults:{ease: "power2.Out", duration:0.3}})
-            .to('#frame1', (flag==true?{}:{delay:0.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
+            .to('#frame1', (flag==true?{}:{delay:1.3, duration:0.3, ease: Power2.easeOut, opacity:0, display:'none', onComplete: animateFrame2}));
           }
         }
         gsap.delayedCall(.8, animateFrame1, [true]);
